# Deepgrep-v3

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: compare.ps1
docs/: ARCHITECTURE.md  EVALUATION.md
src/: cli.rs  index.rs  main.rs  query.rs  search.rs  watcher.rs
tests/: cli.rs
